js enlazado index

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 	    
-	    <script type="text/JavaScript" src="js/jquery.min.js"></script>
-	    <script type="text/JavaScript" src="js/bootstrap.min.js"></script>
+	    <script type="text/JavaScript" src="src/js/jquery.min.js"></script>
+	    <script type="text/JavaScript" src="src/js/bootstrap.min.js"></script>
 	</body>
 </html>
