--- a/Templates/index.html
+++ b/Templates/index.html
@@ -11,8 +11,12 @@
 	    <title>SmartCites | App Dev</title>
 	</head>
 	<body>
-	    
-	    <script type="text/JavaScript" src="src/js/jquery.min.js"></script>
+		<div class="bloque">
+			<h1>noya gay</h1>
+			<span>^</span>
+			<span>pasa el mouse por aqui</span>
+	    </div>
+	    <script type="text/JavaScript" src="src/js/jquery-3.2.1.min.js"></script>
 	    <script type="text/JavaScript" src="src/js/bootstrap.min.js"></script>
 	</body>
 </html>
