--- a/Templates/index.html
+++ b/Templates/index.html
@@ -16,7 +16,11 @@
 			<span>^</span>
 			<span>pasa el mouse por aqui</span>
 	    </div>
+
+	    <label for="">Introduce algo:</label>
+		<input type="text" id ="intro">
 	    <script type="text/JavaScript" src="src/js/jquery-3.2.1.min.js"></script>
 	    <script type="text/JavaScript" src="src/js/bootstrap.min.js"></script>
+	    <script type="text/JavaScript" src="src/js/codigo.js"></script>
 	</body>
 </html>
